Bug fixes for .txt file based gamestate.  Also added a /clean helper command to delete all test games (password protected).